force-app/main/default/objects/OpportunityLineItem/fields/DescuentoAdicional__c.field-meta.xml
<CustomField>
    <fullName>DescuentoAdicional__c</fullName>
    <description>Copia el descuento adicional de la cotización</description>
    <label>Descuento adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>