force-app/main/default/objects/OpportunityLineItem/fields/DescuentoSAP__c.field-meta.xml
<CustomField>
    <fullName>DescuentoSAP__c</fullName>
    <description>Descuento que tiene el producto desde SAP</description>
    <label>Descuento SAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>