force-app/main/default/objects/OpportunityLineItem/fields/IMP_DescuentoPromo__c.field-meta.xml
<CustomField>
    <fullName>IMP_DescuentoPromo__c</fullName>
    <description>Descuento por promoción</description>
    <label>Descuento promoción</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>