force-app/main/default/objects/OpportunityLineItem/fields/IMP_OmitirDescuentoSAP__c.field-meta.xml
<CustomField>
    <fullName>IMP_OmitirDescuentoSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar cuando se omite el descuento sap con base al grupo del cliente 17 Aplicador A y canal 02 Mostrador</description>
    <label>Omitir descuento SAP</label>
    <type>Checkbox</type>
</CustomField>