force-app/main/default/objects/OpportunityLineItem/fields/PrecioTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecioTotal__c</fullName>
    <formula>((1- DescuentoSAP__c )*(UnitPrice * Quantity ) )*(1- DescuentoAdicional__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>